--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.18.3",
     "express": "^4.15.2",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "nodemon": "^1.18.6"
   },
   "devDependencies": {
     "chai": "^4.0.2",
-    "chai-http": "^3.0.0",
+    "chai-http": "^4.2.0",
     "express": "^4.15.3",
-    "mocha": "^3.5.0"
+    "mocha": "^5.2.0"
   }
 }
